<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_end="0dp" />

            <ImageView
                android:id="@+id/backgroundImage"
                android:layout_width="fill_parent"
                android:layout_height="250dp"
                android:contentDescription="@string/background"
                android:scaleType="centerCrop"
                android:scaleX="1.0"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="250dp"
                android:alpha="0.5"
                android:background="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/back_button"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RedundantDescriptionCheck" />

            <ImageView
                android:id="@+id/shareButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/share_button"
                android:fillColor="@color/black"
                android:src="@drawable/ic_baseline_share_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="25dp"
                android:text="@string/title"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/authorImage"
                app:layout_constraintStart_toStartOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/authorImage"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/profile"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintBottom_toBottomOf="@+id/backgroundImage"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:maxWidth="75dp"
                android:text="@string/author"
                android:textColor="@color/white"
                android:textSize="11sp"
                app:layout_constraintBottom_toBottomOf="@+id/backgroundImage"
                app:layout_constraintStart_toEndOf="@+id/authorImage"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <TextView
                android:id="@+id/created_at"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:maxWidth="125dp"
                android:text="@string/author_time"
                android:textColor="@color/white"
                android:textSize="11sp"
                app:layout_constraintBottom_toBottomOf="@+id/backgroundImage"
                app:layout_constraintStart_toEndOf="@+id/author"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <View
                android:id="@+id/view2"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginEnd="20dp"
                android:alpha="0.5"
                android:background="#E91E63"
                app:layout_constraintBottom_toBottomOf="@+id/backgroundImage"
                app:layout_constraintEnd_toEndOf="@+id/backgroundImage"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <TextView
                android:id="@+id/category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textColor="@color/white"
                android:textSize="11sp"
                app:layout_constraintBottom_toBottomOf="@+id/view2"
                app:layout_constraintEnd_toEndOf="@+id/view2"
                app:layout_constraintStart_toStartOf="@+id/view2"
                app:layout_constraintTop_toTopOf="@+id/view2"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/news_description"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view" />


            <TextView
                android:id="@+id/comments_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/comments"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewComment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/comments_description"
                tools:layout_editor_absoluteX="0dp"
                tools:listitem="@layout/item_card_comment_news" />

            <com.google.android.flexbox.FlexboxLayout
                android:padding="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:alignItems="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerViewComment">


                <EditText
                    app:layout_alignSelf="flex_start"
                    app:layout_flexBasisPercent="70%"
                    android:id="@+id/editText"
                    android:layout_width="220dp"
                    android:layout_height="50dp"
                    android:autofillHints="false"
                    android:gravity="start"
                    android:hint="@string/comment"
                    android:inputType="text"
                    android:padding="10dp" />

                <Button
                    android:id="@+id/button"
                    android:theme="@style/BackButton"
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    app:layout_flexBasisPercent="30%"
                    app:layout_alignSelf="flex_end"
                    android:layout_toEndOf="@+id/editText"
                    android:gravity="center"
                    app:layout_constraintEnd_toEndOf="parent" />

            </com.google.android.flexbox.FlexboxLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>

</ScrollView>